<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>elbfisch</groupId>
	<artifactId>elbfisch.fx</artifactId>
	<version>4.1.0</version>
	<packaging>jar</packaging>

	<name>elbfisch.fx</name>
	<url>http://maven.apache.org</url>

	<properties>
	<maven.compiler.source>21</maven.compiler.source>
	<maven.compiler.target>21</maven.compiler.target>  
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<resources>
			<resource>
				<directory>${basedir}/src/main/java/org/jpac/fx/resources</directory>
				<targetPath>org/jpac/fx/resources</targetPath>
				<filtering>false</filtering>
			</resource>
		</resources>		
	</build> 
	<dependencies>
	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>3.8.1</version>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>elbfisch</groupId>
		<artifactId>elbfisch.core</artifactId>
		<version>4.1.0</version>
	</dependency>
		<dependency>
			<groupId>javafx-swt</groupId>
			<artifactId>javafx-swt</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${basedir}/YourPathToJavaFxLibs/javafx-swt.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>javafx.graphics</groupId>
			<artifactId>javafx.graphics</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${basedir}/YourPathToJavaFxLibs/javafx.graphics.jar</systemPath>
		</dependency>		
		<dependency>
			<groupId>javafx.web</groupId>
			<artifactId>javafx.web</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${basedir}/YourPathToJavaFxLibs/javafx.web.jar</systemPath>
		</dependency>		
		<dependency>
			<groupId>javafx.base</groupId>
			<artifactId>javafx.base</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${basedir}/YourPathToJavaFxLibs/javafx.base.jar</systemPath>
		</dependency>		
		<dependency>
			<groupId>javafx.media</groupId>
			<artifactId>javafx.media</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${basedir}/YourPathToJavaFxLibs/javafx.media.jar</systemPath>
		</dependency>		
		<dependency>
			<groupId>javafx.controls</groupId>
			<artifactId>javafx.controls</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${basedir}/YourPathToJavaFxLibs/javafx.controls.jar</systemPath>
		</dependency>		
		<dependency>
			<groupId>javafx.fxml</groupId>
			<artifactId>javafx.fxml</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${basedir}/YourPathToJavaFxLibs/javafx.fxml.jar</systemPath>
		</dependency>		
		<dependency>
			<groupId>javafx.swing</groupId>
			<artifactId>javafx.swing</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${basedir}/YourPathToJavaFxLibs/javafx.swing.jar</systemPath>
		</dependency>    
	</dependencies>
</project>
